tests/cases/compiler/functionOverloads3/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.2/tests/cases/compiler/functionOverloads3.ts`, Apache-2.0 License

function foo():string;
//~^ ERROR: Function implementation is missing or not immediately following the declaration.